crates/plurimus_widgets/tests/snapshots/stylists__button_disabled.snap
---
source: crates/plurimus_ui/tests/stylists.rs
expression: frame(&app)
---
  [ ok ]  
--
aaaaaaaaaa
a: fg:Some(Yellow) bg:Some(Reset) mods:BOLD
