crates/plurimus_widgets/tests/snapshots/stylists__button_hovered.snap
---
source: crates/plurimus_ui/tests/stylists.rs
expression: frame(&app)
---
  [ ok ]  
--
aaaaaaaaaa
a: fg:Some(Cyan) bg:Some(Reset) mods:NONE
