crates/plurimus_widgets/tests/snapshots/stylists__button_normal.snap
---
source: crates/plurimus_ui/tests/stylists.rs
expression: frame(&app)
---
  [ ok ]  
--
aaaaaaaaaa
a: fg:Some(Reset) bg:Some(Reset) mods:NONE
