crates/plurimus_widgets/tests/snapshots/stylists__button_pressed.snap
---
source: crates/plurimus_ui/tests/stylists.rs
expression: frame(&app)
---
  [ ok ]  
--
aaaaaaaaaa
a: fg:Some(Yellow) bg:Some(Cyan) mods:BOLD
