crates/plurimus_widgets/tests/snapshots/stylists__checkbox_checked.snap
---
source: crates/plurimus_ui/tests/stylists.rs
expression: frame(&app)
---
[x] dark    
--
aaaaaaaaaaaa
a: fg:Some(Yellow) bg:Some(Reset) mods:BOLD
