crates/plurimus_widgets/tests/snapshots/stylists__checkbox_unchecked.snap
---
source: crates/plurimus_ui/tests/stylists.rs
expression: frame(&app)
---
[ ] dark    
--
aaaaaaaaaaaa
a: fg:Some(Reset) bg:Some(Reset) mods:NONE
