crates/plurimus_widgets/tests/snapshots/stylists__radio_first_selected.snap
---
source: crates/plurimus_ui/tests/stylists.rs
expression: frame(&app)
---
(•) one   
( ) two   
--
aaaaaaaaaa
aaaaaaaaaa
a: fg:Some(Reset) bg:Some(Reset) mods:NONE
