crates/plurimus_widgets/tests/snapshots/stylists__slider_at_0.snap
---
source: crates/plurimus_ui/tests/stylists.rs
expression: frame(&app)
---
█──────────
--
aaaaaaaaaaa
a: fg:Some(Reset) bg:Some(Reset) mods:NONE
