crates/plurimus_widgets/tests/snapshots/stylists__slider_at_100_focused.snap
---
source: crates/plurimus_ui/tests/stylists.rs
expression: frame(&app)
---
━━━━━━━━━━█
--
aaaaaaaaaaa
a: fg:Some(Yellow) bg:Some(Reset) mods:BOLD
